# src/OpenApi.php
@@ -53,6 +53,31 @@ use OpenApi\Attributes as OA;
                         ],
                     ),
                 ],
+                example: [
+                    ResponseInterface::RESPONSE_API_KEY_DATA => [
+                        OutputTransformerInterface::KEY_VALID_FROM => 1784570400,
+                        OutputTransformerInterface::KEY_VALID_FROM_ISO8601 => '2026-07-20T18:00:00+00:00',
+                        OutputTransformerInterface::KEY_VALID_TO => 1784574000,
+                        OutputTransformerInterface::KEY_VALID_TO_ISO8601 => '2026-07-20T19:00:00+00:00',
+                        OutputTransformerInterface::KEY_TEMPERATURE => 23.69,
+                        OutputTransformerInterface::KEY_TEMPERATURE_FEELS_LIKE => 22.05,
+                        OutputTransformerInterface::KEY_HUMIDITY => 32.39,
+                        OutputTransformerInterface::KEY_PRECIPITATION => 0,
+                        OutputTransformerInterface::KEY_UV_INDEX => 1,
+                        OutputTransformerInterface::KEY_VISIBILITY => 31474,
+                        OutputTransformerInterface::KEY_WIND_SPEED => 6.151574803149599,
+                        OutputTransformerInterface::KEY_WIND_GUST => 13.600572655690751,
+                        OutputTransformerInterface::KEY_WIND_DIRECTION => 'NE',
+                        OutputTransformerInterface::KEY_WIND_DIRECTION_DEGREES => 40,
+                        OutputTransformerInterface::KEY_TYPE => 1,
+                        OutputTransformerInterface::KEY_TYPE_STRING => 'Sunny day',
+                        OutputTransformerInterface::KEY_TYPE_EMOJI => '☀️',
+                    ],
+                    ResponseInterface::RESPONSE_API_KEY_SUCCESS => true,
+                    ResponseInterface::RESPONSE_API_KEY_TIMESTAMP_ISO8601 => '2026-07-20T18:19:48+00:00',
+                    ResponseInterface::RESPONSE_API_KEY_TIMESTAMP_UNIX => 1784571588,
+                    ResponseInterface::RESPONSE_API_KEY_VERSION => 'get-met-office-weather-00028-dig',
+                ],
             ),
         ),
         new OA\Response(
